# scraper

./: .clang-format  .gitignore  CMakeLists.txt
api/: CMakeLists.txt
api/include/: AbstractDbMigration.h  AlterTableMigration.h  CreateDatabaseMigration.h  CreateTableMigration.h  DbConverters.h  DbProxyApplication.h  DbProxySettings.h  DbTypes.h  Errors.h  Exceptions.h  IApplication.h  IDbMigration.h  IMessagePublisher.h  IMigrator.h  KafkaPublisher.h  Listener.h  PgConnection.h  PgConnectionFactory.h  PgConnectionPool.h  ScraperInitialMigration.h  ScraperMigrator.h  Session.h  Settings.h  abstract_db_migration.h  action_cast.h  action_factory.h  add_job_handler.h  add_job_request.h  alter_table_migration.h  cast_action_visitor.h  click_element_action.h  create_table_migration.h  db_converters.h  db_proxy_application.h  db_types.h  default_action_visitor.h  disable_job_handler.h  emulate_mouse_move_action.h  enable_job_handler.h  errors.h  (+39 more)
api/src/: AbstractDbMigration.cpp  AlterTableMigration.cpp  CreateDatabaseMigration.cpp  CreateTableMigration.cpp  DbProxyApplication.cpp  DbProxySettings.cpp  Errors.cpp  KafkaPublisher.cpp  Listener.cpp  PgConnection.cpp  PgConnectionFactory.cpp  PgConnectionPool.cpp  ScraperInitialMigration.cpp  ScraperMigrator.cpp  Session.cpp  Settings.cpp  abstract_db_migration.cpp  action_factory.cpp  add_job_handler.cpp  alter_table_migration.cpp  click_element_action.cpp  create_table_migration.cpp  db_proxy_application.cpp  default_action_visitor.cpp  disable_job_handler.cpp  emulate_mouse_move_action.cpp  enable_job_handler.cpp  errors.cpp  extract_field_from_url_action.cpp  get_element_by_css_selector_action.cpp  get_element_by_xpath_action.cpp  get_images_by_xpath_action.cpp  go_to_url_action.cpp  http_handler_registry.cpp  job_list_handler.cpp  kafka_publisher.cpp  key_press_action.cpp  listener.cpp  migration_factory.cpp  operations.cpp  (+16 more)
browser/: package-lock.json  package.json  tsconfig.json  webpack.config.cjs
browser/bundle/: browser.js
browser/src/: actions.ts  index.ts  wait_for.ts
cmake/: clang_options.cmake
common/: CMakeLists.txt
common/include/: Helpers.h  Logger.h  VariantVisitor.h  finally.h  helpers.h  not_null.h  stdafx.h
common/src/: Helpers.cpp  Logger.cpp  helpers.cpp  logger.cpp
core/: CMakeLists.txt
core/include/: abstract_db_migration.h  action_factory.h  add_job_handler.h  click_element_action.h  create_table_migration.h  db_converters.h  db_proxy_application.h  db_types.h  disable_job_handler.h  enable_job_handler.h  exceptions.h  extract_field_from_url_action.h  go_to_url_action.h  http_response_misc.h  iaction_factory.h  ihttp_handler.h  imessage_publisher.h  kafka_publisher.h  listener.h  optional_action.h  pg_connection_factory.h  pg_connection_pool.h  random_pause_action.h  run_script_action.h  update_job_handler.h  wait_for_element_by_xpath_action.h
core/src/: db_proxy_application.cpp  disable_job_handler.cpp  emulate_mouse_move_action.cpp  enable_job_handler.cpp  get_element_by_css_selector_action.cpp  get_images_by_xpath_action.cpp  listener.cpp  optional_action.cpp  pg_connection_factory.cpp  random_pause_action.cpp  scraper_initial_migration.cpp  update_job_handler.cpp  wait_for_element_by_xpath_action.cpp
dataserver/: CMakeLists.txt
dataserver/common/: CMakeLists.txt
dataserver/dataserver/: CMakeLists.txt
dataserver/tests/: CMakeLists.txt
dbproxy/: CMakeLists.txt
dbproxy/include/: stdafx.h
dbproxy/src/: Main.cpp  main.cpp
panel/: package-lock.json  package.json  tsconfig.json  webpack.config.cjs
panel/src/: actions.ts  actions.tsx  app.tsx  data_model.ts  http.ts  job.ts  jobs.tsx  open_notification.tsx
scheduler/: .clang-format  CMakeLists.txt  README.md
scheduler/cmake/: add_clang_format.cmake  clang_options.cmake
scheduler/common/: CMakeLists.txt
scheduler/common/include/: finally.h  helpers.h  logger.h  not_null.h  stdafx.h  types.h  variant_visitor.h
scheduler/common/src/: helpers.cpp  logger.cpp
scheduler/core/: CMakeLists.txt
scheduler/core/include/: abstract_db_migration.h  action_factory.h  add_job_handler.h  create_table_migration.h  db_converters.h  db_types.h  disable_job_handler.h  errors.h  get_element_by_css_selector_action.h  get_element_by_xpath_action.h  get_images_by_xpath_action.h  go_to_url_action.h  http_response_misc.h  iapplication.h  idb_migration.h  ihttp_handler.h  job_list_handler.h  kafka_publisher.h  pg_connection_pool.h  random_pause_action.h  remove_job_handler.h  run_script_action.h  scraper_initial_migration.h  session.h  set_cookies_action.h  stdafx.h  type_text_on_element_by_xpath_action.h
scheduler/core/src/: click_element_action.cpp  disable_job_handler.cpp  emulate_mouse_move_action.cpp  enable_job_handler.cpp  errors.cpp  extract_field_from_url_action.cpp  get_element_by_xpath_action.cpp  job_list_handler.cpp  kafka_publisher.cpp  key_press_action.cpp  listener.cpp  migration_factory.cpp  optional_action.cpp  pg_connection_factory.cpp  pg_connection_pool.cpp  random_pause_action.cpp  remove_job_handler.cpp  scraper_initial_migration.cpp  set_cookies_action.cpp  update_job_handler.cpp  wait_for_element_by_xpath_action.cpp
scheduler/docker/postgres/: docker-compose.yml  initdb.sql
scheduler/scheduler/: CMakeLists.txt
scheduler/scheduler/include/: stdafx.h
scheduler/scheduler/src/: main.cpp
scheduler/scripts/: docker-start-pg.sh  docker-stop-pg.sh
scheduler/tests/: CMakeLists.txt
scraper-server/: .clang-format  .dockerignore  CMakeLists.txt  test.cpp
scraper-server/cmake/: register_for_clang_format.cmake
scraper-server/common/: CMakeLists.txt
scraper-server/core/: CMakeLists.txt
scraper-server/docker/: Dockerfile  DockerfileCentos  docker-compose.yml  initdb.sql  scraper-server.service
scraper-server/scraper-server/: CMakeLists.txt
scraper-server/scripts/: docker.sh  xcode-generate.sh
scraper-server/tests/: CMakeLists.txt
scraper-server/tests/include/: stdafx.h
scripts/: build.sh  generate.sh  vcpkg-init.sh  vs2019_generate.bat  xcode-generate.sh
scripts/vcpkg-init-scripts/: vcpkg-init-unix.sh  (+2 more)
(+91 files in other folders)
